Upgrade repo layer
