# docs/swagger.yaml
@@ -1,14 +1,14 @@
 basePath: /
 definitions:
-  github_com_Chaika-Team_ChaikaGoods_internal_handler_schemas.AddPacketRequest:
+  github_com_Chaika-Team_ChaikaGoods_internal_handler_schemas.AddPackageRequest:
     description: Запрос на добавление пакета
     properties:
-      packet:
+      Package:
         allOf:
         - $ref: '#/definitions/github_com_Chaika-Team_ChaikaGoods_internal_handler_schemas.PackageSchema'
         description: Сведения о новом пакете
     type: object
-  github_com_Chaika-Team_ChaikaGoods_internal_handler_schemas.AddPacketResponse:
+  github_com_Chaika-Team_ChaikaGoods_internal_handler_schemas.AddPackageResponse:
     description: Ответ на запрос на добавление пакета
     properties:
       id:
@@ -47,10 +47,10 @@ definitions:
           $ref: '#/definitions/github_com_Chaika-Team_ChaikaGoods_internal_handler_schemas.ProductSchema'
         type: array
     type: object
-  github_com_Chaika-Team_ChaikaGoods_internal_handler_schemas.GetPacketByIDResponse:
+  github_com_Chaika-Team_ChaikaGoods_internal_handler_schemas.GetPackageByIDResponse:
     description: Ответ на запрос на получение пакета по его ID
     properties:
-      packet:
+      Package:
         $ref: '#/definitions/github_com_Chaika-Team_ChaikaGoods_internal_handler_schemas.PackageSchema'
     type: object
   github_com_Chaika-Team_ChaikaGoods_internal_handler_schemas.GetProductByIDResponse:
@@ -92,10 +92,10 @@ definitions:
       price:
         type: number
     type: object
-  github_com_Chaika-Team_ChaikaGoods_internal_handler_schemas.SearchPacketResponse:
+  github_com_Chaika-Team_ChaikaGoods_internal_handler_schemas.SearchPackagesResponse:
     description: Ответ на запрос на поиск пакетов
     properties:
-      packets:
+      Packages:
         items:
           $ref: '#/definitions/github_com_Chaika-Team_ChaikaGoods_internal_handler_schemas.PackageSchema'
         type: array
@@ -121,25 +121,25 @@ info:
   title: ChaikaGoods API
   version: 0.0.2
 paths:
-  /api/v1/packets:
+  /api/v1/Packages:
     post:
       consumes:
       - application/json
-      description: Add a new packet of products to the database
+      description: Add a new Package of products to the database
       parameters:
-      - description: Packet details
+      - description: Package details
         in: body
-        name: packet
+        name: Package
         required: true
         schema:
-          $ref: '#/definitions/github_com_Chaika-Team_ChaikaGoods_internal_handler_schemas.AddPacketRequest'
+          $ref: '#/definitions/github_com_Chaika-Team_ChaikaGoods_internal_handler_schemas.AddPackageRequest'
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/github_com_Chaika-Team_ChaikaGoods_internal_handler_schemas.AddPacketResponse'
+            $ref: '#/definitions/github_com_Chaika-Team_ChaikaGoods_internal_handler_schemas.AddPackageResponse'
         "400":
           description: Bad Request
           schema:
@@ -148,16 +148,16 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/github_com_Chaika-Team_ChaikaGoods_internal_handler_schemas.ErrorResponse'
-      summary: Add packet
+      summary: Add Package
       tags:
-      - packets
-  /api/v1/packets/{id}:
+      - Packages
+  /api/v1/Packages/{id}:
     get:
       consumes:
       - application/json
-      description: Get packet details by its ID
+      description: Get Package details by its ID
       parameters:
-      - description: Packet ID
+      - description: Package ID
         in: path
         name: id
         required: true
@@ -168,7 +168,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/github_com_Chaika-Team_ChaikaGoods_internal_handler_schemas.GetPacketByIDResponse'
+            $ref: '#/definitions/github_com_Chaika-Team_ChaikaGoods_internal_handler_schemas.GetPackageByIDResponse'
         "404":
           description: Not Found
           schema:
@@ -177,14 +177,14 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/github_com_Chaika-Team_ChaikaGoods_internal_handler_schemas.ErrorResponse'
-      summary: Get packet by ID
+      summary: Get Package by ID
       tags:
-      - packets
-  /api/v1/packets/search:
+      - Packages
+  /api/v1/Packages/search:
     get:
       consumes:
       - application/json
-      description: Search for packets
+      description: Search for Packages
       parameters:
       - description: Search query
         in: query
@@ -206,14 +206,14 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/github_com_Chaika-Team_ChaikaGoods_internal_handler_schemas.SearchPacketResponse'
+            $ref: '#/definitions/github_com_Chaika-Team_ChaikaGoods_internal_handler_schemas.SearchPackagesResponse'
         "500":
           description: Internal Server Error
           schema:
             $ref: '#/definitions/github_com_Chaika-Team_ChaikaGoods_internal_handler_schemas.ErrorResponse'
-      summary: Search packet
+      summary: Search Package
       tags:
-      - packets
+      - Packages
   /api/v1/products:
     get:
       consumes:
